second commit: building pointer network

--- a/Pointer Net Test.ipynb
+++ b/Pointer Net Test.ipynb
@@ -9,18 +9,21 @@
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from ptr_decoder import pointer_decoder\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "a = tf.placeholder(shape=(None, 50), dtype=tf.float32)"
+    "sess = tf.Session(config=tf.ConfigProto(log_device_placement=True))"
    ]
   },
   {
@@ -29,112 +32,70 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[None, 50]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "a.get_shape().as_list()"
+    "with tf.device(\"/gpu:1\"):\n",
+    "    encoder_inputs = [tf.constant(np.array([[0.5, 0.5]]), dtype=tf.float32)] * 4\n",
+    "    cell = tf.nn.rnn_cell.BasicLSTMCell(num_units=10, state_is_tuple=True)\n",
+    "    encoder_output, final_state = tf.nn.rnn(cell=cell, dtype=tf.float32, inputs=encoder_inputs)\n",
+    "    attention_states = [tf.reshape(tensor=e, shape=(-1, 10)) for e in encoder_output]\n",
+    "    attention_states = tf.pack(axis=1, values=attention_states)\n",
+    "    decoder_inputs = [tf.constant(value=np.array([[0.5, 0.5]]), dtype=tf.float32)] * 4\n",
+    "    output = pointer_decoder(cell, decoder_inputs, final_state, attention_states)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "\n",
-    "class DataGenerator(object):\n",
-    "\n",
-    "    def __init__(self):\n",
-    "        \"\"\"Construct a DataGenerator.\"\"\"\n",
-    "        pass\n",
-    "\n",
-    "    def next_batch(self, batch_size, N, train_mode=True):\n",
-    "        \"\"\"Return the next `batch_size` examples from this data set.\"\"\"\n",
-    "\n",
-    "        # A sequence of random numbers from [0, 1]\n",
-    "        reader_input_batch = []\n",
-    "\n",
-    "        # Sorted sequence that we feed to encoder\n",
-    "        # In inference we feed an unordered sequence again\n",
-    "        decoder_input_batch = []\n",
-    "\n",
-    "        # Ordered sequence where one hot vector encodes position in the input array\n",
-    "        writer_outputs_batch = []\n",
-    "        for _ in range(N):\n",
-    "            reader_input_batch.append(np.zeros([batch_size, 1]))\n",
-    "        for _ in range(N + 1):\n",
-    "            decoder_input_batch.append(np.zeros([batch_size, 1]))\n",
-    "            writer_outputs_batch.append(np.zeros([batch_size, N + 1]))\n",
-    "\n",
-    "        for b in range(batch_size):\n",
-    "            print shuffle\n",
-    "            print sequence\n",
-    "            print shuffled_sequence\n",
-    "            for i in range(N):\n",
-    "                reader_input_batch[i][b] = shuffled_sequence[i]\n",
-    "                if train_mode:\n",
-    "                    decoder_input_batch[i + 1][b] = sequence[i]\n",
-    "                else:\n",
-    "                    decoder_input_batch[i + 1][b] = shuffled_sequence[i]\n",
-    "                writer_outputs_batch[shuffle[i]][b, i + 1] = 1.0\n",
-    "\n",
-    "            # Points to the stop symbol\n",
-    "            writer_outputs_batch[N][b, 0] = 1.0\n",
-    "\n",
-    "        return reader_input_batch, decoder_input_batch, writer_outputs_batch"
+    "sess.run(tf.initialize_all_variables())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.24572249,  0.26636925,  0.25572783,  0.23218039]], dtype=float32)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sess.run(output[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "g = DataGenerator()"
+    "with tf.device(\"/gpu:1\"):\n",
+    "    tf.get_variable_scope().reuse_variables()\n",
+    "    test = pointer_decoder(cell, decoder_inputs, attention_states=attention_states, \n",
+    "                           encoder_inputs=encoder_inputs, feed_prev=True, initial_state=final_state)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[4 6 0 7 2 5 3 1]\n",
-      "[ 0.01920566  0.56949056  0.72847146  0.77985133  0.78301     0.79420168\n",
-      "  0.980741    0.98678914]\n",
-      "[ 0.78301     0.980741    0.01920566  0.98678914  0.72847146  0.79420168\n",
-      "  0.77985133  0.56949056]\n"
-     ]
-    }
-   ],
-   "source": [
-    "r, d, w = g.next_batch(1, 8, False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -142,233 +103,16 @@
     {
      "data": {
       "text/plain": [
-       "[array([[ 0.,  0.,  0.,  1.,  0.,  0.,  0.,  0.,  0.]]),\n",
-       " array([[ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  1.]]),\n",
-       " array([[ 0.,  0.,  0.,  0.,  0.,  1.,  0.,  0.,  0.]]),\n",
-       " array([[ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  1.,  0.]]),\n",
-       " array([[ 0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.]]),\n",
-       " array([[ 0.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,  0.]]),\n",
-       " array([[ 0.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.]]),\n",
-       " array([[ 0.,  0.,  0.,  0.,  1.,  0.,  0.,  0.,  0.]]),\n",
-       " array([[ 1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.]])]"
+       "array([[ 0.24572249,  0.26636925,  0.25572783,  0.23218039]], dtype=float32)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "w"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([[ 0.78301]]),\n",
-       " array([[ 0.980741]]),\n",
-       " array([[ 0.01920566]]),\n",
-       " array([[ 0.98678914]]),\n",
-       " array([[ 0.72847146]]),\n",
-       " array([[ 0.79420168]]),\n",
-       " array([[ 0.77985133]]),\n",
-       " array([[ 0.56949056]])]"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "r"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([[ 0.]]),\n",
-       " array([[ 0.78301]]),\n",
-       " array([[ 0.980741]]),\n",
-       " array([[ 0.01920566]]),\n",
-       " array([[ 0.98678914]]),\n",
-       " array([[ 0.72847146]]),\n",
-       " array([[ 0.79420168]]),\n",
-       " array([[ 0.77985133]]),\n",
-       " array([[ 0.56949056]])]"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "not None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "a = [tf.placeholder(shape=(1, 2), dtype=tf.float32, name=\"in\")] * 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor 'pack_2:0' shape=(3, 1, 2) dtype=float32>"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tf.pack(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "a = np.arange(18).reshape(3, 3, 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[ 2,  3],\n",
-       "        [ 4,  5]],\n",
-       "\n",
-       "       [[ 8,  9],\n",
-       "        [10, 11]],\n",
-       "\n",
-       "       [[14, 15],\n",
-       "        [16, 17]]])"
-      ]
-     },
-     "execution_count": 109,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a[:, [1, 2], :]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([6, 7])"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a[1, 0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "input = tf.constant(np.arange(10))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor 'concat_2:0' shape=(20,) dtype=int64>"
-      ]
-     },
-     "execution_count": 112,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tf.pack(0, (input, np.arange(10)))"
+    "sess.run(test[0])"
    ]
   },
   {
@@ -378,21 +122,20 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    ""
-   ]
+   "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2.0
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
