--- a/Pointer Net Test.ipynb
+++ b/Pointer Net Test.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
@@ -478,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -487,44 +496,87 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating 0th data\n",
-      "Generating 1th data\n",
-      "Generating 2th data\n",
-      "Generating 3th data\n"
+      "Generating 1th/2th data\n",
+      "Generating 2th/2th data\n",
+      "here\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-36-5cdf0dc706e5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgenerate_tsp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m15\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/Users/JunhongXu/Desktop/pointer-net-tensorflow/data_generator.py\u001b[0m in \u001b[0;36mgenerate_tsp\u001b[0;34m(data_size, seq_len)\u001b[0m\n\u001b[1;32m    100\u001b[0m         \u001b[0mnodes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseq_len\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    101\u001b[0m         \u001b[0mnodes_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnodes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 102\u001b[0;31m         \u001b[0mresult\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtsp_opt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnodes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    103\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    104\u001b[0m     \u001b[0mnodes_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpandas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnodes_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/JunhongXu/Desktop/pointer-net-tensorflow/data_generator.py\u001b[0m in \u001b[0;36mtsp_opt\u001b[0;34m(points)\u001b[0m\n\u001b[1;32m     84\u001b[0m                 \u001b[0;31m# this will use 0th index of tuple for ordering, the same as if key=itemgetter(0) used\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     85\u001b[0m                 B[(S, j)] = min([(A[(S - {j}, k)][0] + all_distances[k][j], A[(S - {j}, k)][1] + [j])\n\u001b[0;32m---> 86\u001b[0;31m                                  for k in S if k != 0 and k != j])\n\u001b[0m\u001b[1;32m     87\u001b[0m         \u001b[0mA\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mB\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     88\u001b[0m     \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mall_distances\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mA\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0md\u001b[0m \u001b[0;32min\u001b[0m \u001b[0miter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "data": {
+      "text/plain": [
+       "(array([[ 0.10071096,  0.04132511,  0.70670501,  0.71903626,  0.55789682,\n",
+       "          0.99134096,  0.68160907,  0.91337762,  0.09153877,  0.14169139],\n",
+       "        [ 0.04791521,  0.95913664,  0.10420363,  0.03799728,  0.3388539 ,\n",
+       "          0.26849025,  0.55395599,  0.75106891,  0.96517935,  0.67329062]]),\n",
+       " array([[0, 1, 3, 2, 4],\n",
+       "        [0, 3, 4, 2, 1]]))"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "generate_tsp(2, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.87809872  0.89070837  0.52865758  0.0081665 ]\n",
+      " [ 0.85244423  0.44752495  0.17270363  0.31087531]\n",
+      " [ 0.03390557  0.69512264  0.77842225  0.03887562]] \n",
+      " [[[ 0.87809872  0.89070837]\n",
+      "  [ 0.85244423  0.44752495]\n",
+      "  [ 0.03390557  0.69512264]]\n",
+      "\n",
+      " [[ 0.52865758  0.0081665 ]\n",
+      "  [ 0.17270363  0.31087531]\n",
+      "  [ 0.77842225  0.03887562]]] \n",
+      " [[[ 1.  0.]\n",
+      "  [ 1.  0.]\n",
+      "  [ 1.  0.]]\n",
+      "\n",
+      " [[ 0.  1.]\n",
+      "  [ 0.  1.]\n",
+      "  [ 0.  1.]]] \n",
+      " [[0 1]\n",
+      " [0 1]\n",
+      " [0 1]]\n"
      ]
     }
    ],
    "source": [
-    "generate_tsp(20, 15)"
+    "tsp(2, 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "a = pd.DataFrame.from_csv(\"data/tsp_seq20_opt_data.csv\")"
+    "sequences = np.random.random((3, 2, 1))\n",
+    "\n",
+    "# sorted sequences\n",
+    "sorted_sequences = np.sort(sequences, axis=0)\n",
+    "sorted_index = np.squeeze(np.argsort(sequences, axis=0))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -532,36 +584,16 @@
     {
      "data": {
       "text/plain": [
-       "0     0.150685\n",
-       "1     0.966851\n",
-       "2     0.288688\n",
-       "3     0.541370\n",
-       "4     0.702208\n",
-       "5     0.933110\n",
-       "6     0.189310\n",
-       "7     0.380923\n",
-       "8     0.873159\n",
-       "9     0.377084\n",
-       "10    0.397290\n",
-       "11    0.011388\n",
-       "12    0.530375\n",
-       "13    0.347427\n",
-       "14    0.275537\n",
-       "15    0.084176\n",
-       "16    0.260153\n",
-       "17    0.632174\n",
-       "18    0.593096\n",
-       "19    0.842135\n",
-       "Name: 12, dtype: float64"
+       "(3, 2)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a[\"12\"]"
+    "sorted_index.shape"
    ]
   },
   {
