--- a/Pointer Net Test.ipynb
+++ b/Pointer Net Test.ipynb
@@ -2,20 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
@@ -487,96 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generating 1th/2th data\n",
-      "Generating 2th/2th data\n",
-      "here\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(array([[ 0.10071096,  0.04132511,  0.70670501,  0.71903626,  0.55789682,\n",
-       "          0.99134096,  0.68160907,  0.91337762,  0.09153877,  0.14169139],\n",
-       "        [ 0.04791521,  0.95913664,  0.10420363,  0.03799728,  0.3388539 ,\n",
-       "          0.26849025,  0.55395599,  0.75106891,  0.96517935,  0.67329062]]),\n",
-       " array([[0, 1, 3, 2, 4],\n",
-       "        [0, 3, 4, 2, 1]]))"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "generate_tsp(2, 5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.87809872  0.89070837  0.52865758  0.0081665 ]\n",
-      " [ 0.85244423  0.44752495  0.17270363  0.31087531]\n",
-      " [ 0.03390557  0.69512264  0.77842225  0.03887562]] \n",
-      " [[[ 0.87809872  0.89070837]\n",
-      "  [ 0.85244423  0.44752495]\n",
-      "  [ 0.03390557  0.69512264]]\n",
-      "\n",
-      " [[ 0.52865758  0.0081665 ]\n",
-      "  [ 0.17270363  0.31087531]\n",
-      "  [ 0.77842225  0.03887562]]] \n",
-      " [[[ 1.  0.]\n",
-      "  [ 1.  0.]\n",
-      "  [ 1.  0.]]\n",
-      "\n",
-      " [[ 0.  1.]\n",
-      "  [ 0.  1.]\n",
-      "  [ 0.  1.]]] \n",
-      " [[0 1]\n",
-      " [0 1]\n",
-      " [0 1]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "tsp(2, 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "sequences = np.random.random((3, 2, 1))\n",
-    "\n",
-    "# sorted sequences\n",
-    "sorted_sequences = np.sort(sequences, axis=0)\n",
-    "sorted_index = np.squeeze(np.argsort(sequences, axis=0))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -584,16 +486,16 @@
     {
      "data": {
       "text/plain": [
-       "(3, 2)"
+       "'sort'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sorted_index.shape"
+    "sort.__name__"
    ]
   },
   {
@@ -609,21 +511,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [conda env:tensorflow-p3.5]",
    "language": "python",
-   "name": "python2"
+   "name": "conda-env-tensorflow-p3.5-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
